# BattleBeyz

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  Units.txt  beyblade_profiles.ini  imgui.ini
assets/: BeybladeTemplate.cpp  assets.txt
assets/images/: IceCream_1.mtl  beyblade2.mtl
assets/layers/: layer_light.mtl.mtl
assets/models/: IceCream_Cone.mtl  TestBlade5.mtl  TestBlade6.mtl  beyblade.mtl
assets/shaders/: background.fs  background.vs  basic.fs  fancy.fs  fancy.vs  object.fs  object.vs  panorama.fs  panorama.vs
docs/: BattleBeyz_Comments.docx  Coding_Style.docx  TODO.xlsx
doxydocs/: Doxyfile  gendocs.cmd
doxydocs/html/: _beyblade_8cpp.html  _beyblade_8h.html  _beyblade_8h_source.html  _beyblade_body_8cpp.html  _beyblade_body_8h.html  _beyblade_body_8h_source.html  _beyblade_parts_8h.html  _beyblade_parts_8h_source.html  _bounding_box_8cpp.html  _bounding_box_8h.html  _bounding_box_8h_source.html  _buffers_8cpp.html  _buffers_8h.html  _buffers_8h_source.html  _callbacks_8cpp.html  _callbacks_8h.html  _callbacks_8h_source.html  _camera_8cpp.html  _camera_8h.html  _camera_8h_source.html  _game_control_8h.html  _game_control_8h_source.html  _game_object_8h.html  _game_object_8h_source.html  _initialize_8cpp.html  _initialize_8h.html  _initialize_8h_source.html  _physics_8cpp.html  _physics_8h.html  _physics_8h_source.html  _physics_world_8cpp.html  _physics_world_8h.html  _physics_world_8h_source.html  _quad_renderer_8cpp.html  _quad_renderer_8h.html  _quad_renderer_8h_source.html  _r_e_a_d_m_e_8md.html  _random_distribution_8h.html  _random_distribution_8h_source.html  _rigid_body_8cpp.html  (+177 more)
doxydocs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+73 more)
game_data/: imgui.ini  profiles.json
lib/glew-2.2.0/src/: glew.c
lib/headers/: json.hpp
lib/imgui-1.90.8/: imgui_tables.cpp
lib/imgui-1.90.8/docs/: BACKENDS.md
lib/tinyobjloader-release/: tiny_obj_loader.h
meta/: changelog.txt  dependencies.dot  dependency_graph_generation.py  legacycode.cpp  py_requirements.txt
src/: Beyblade.cpp  Beyblade.h  Buffers.cpp  Buffers.h  Callbacks.cpp  Callbacks.h  Camera.cpp  Camera.h  GameControl.h  GameEngine.cpp  GameEngine.h  GameMessage.h  Initialize.cpp  Initialize.h  InputManager.cpp  InputManager.h  InputUtils.cpp  InputUtils.h  MessageLog.cpp  MessageLog.h  Physics.cpp  PhysicsWorld.cpp  PhysicsWorld.h  Profile.cpp  Profile.h  ProfileManager.cpp  ProfileManager.h  QuadRenderer.h  README.md  RigidBody.h  Settings.h  ShaderPath.h  ShaderProgram.h  Stadium.cpp  Stadium.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Timer.cpp  Timer.h  (+6 more)
src/Camera/: Camera.cpp  Camera.h  CameraBehavior.h  CameraBehaviorManager.h
src/Camera/CameraBehaviors/: AttachedBehavior.cpp  AttachedBehavior.h  InteractiveBehavior.h  PanningBehavior.cpp  PanningBehavior.h
src/Config/: BeybladeConstants.cpp  BeybladeConstants.h  BeybladeTemplate.cpp  BeybladeTemplate.h  BeybladeTemplatePath.h  DefaultValues.h  ShaderPath.h
src/GameObjects/: Beyblade.cpp  Beyblade.h  Floor.cpp  Floor.h  GameObject.cpp  GameObject.h  Stadium.cpp  Stadium.h
src/MeshObjects/: BeybladeMesh.cpp  BeybladeMesh.h  MeshObject.cpp  MeshObject.h  StadiumMesh.cpp  StadiumMesh.h
src/Physics/: BoundingBox.cpp  BoundingBox.h  Physics.cpp  Physics.h  PhysicsWorld.cpp  PhysicsWorld.h  RigidBody.cpp  RigidBody.h
src/Physics/Units/: Dimensions.h  Literals.h  Quantity.h  Units.h  Units.tpp  UnitsSystem.h  UnitsTest.cpp  Vector3Quantity.h
src/Rendering/: BackgroundShader.cpp  BackgroundShader.h  FramebufferRenderer.cpp  FramebufferRenderer.h  ObjectShader.cpp  ObjectShader.h  QuadRenderer.cpp  QuadRenderer.h  ShaderPath.h  ShaderProgram.cpp  ShaderProgram.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
src/RigidBodies/: BeybladeBody.cpp  BeybladeBody.h  BeybladeParts.h  RandomDistribution.h  StadiumBody.cpp  StadiumBody.h
src/States/: AboutState.cpp  AboutState.h  ActiveState.cpp  ActiveState.h  CustomizeState.cpp  CustomizeState.h  CustomizeStatee.cpp  GameState.cpp  GameState.h  HomeState.cpp  HomeState.h  LoadingState.cpp  LoadingState.h  PauseState.cpp  PauseState.h  SelectionState.cpp  SelectionState.h  SettingsState.cpp  SettingsState.h  StateFactory.cpp  StateFactory.h  StateIdentifiers.h  StateManager.h
src/States/Customization/: CustomizeState.cpp  CustomizeState.h  SelectionState.cpp
src/States/Customize/: SelectionState.h
src/States/Gameplay/: ActiveState.cpp  ActiveState.h  PreBattleState.cpp  PreBattleState.h
src/States/Menu/: HomeState.cpp  HomeState.h  SettingsState.cpp  SettingsState.h
src/UI/: FontManager.cpp  FontManager.h  ImGuiUI.cpp  ImGuiUI.h  ImGuiUtils.cpp  ImGuiUtils.h  RenderUI.cpp  RenderUI.h  StadiumPreview.cpp  StadiumPreview.h  UI.cpp  UI.h
